namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: my-app
    app.kubernetes.io/instance: my-namespace
    app.kubernetes.io/name: my-namespace
  name: my-namespace
