daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: node-exporter
  name: node-exporter
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - name: node-exporter
          image: k8s.gcr.io/pause:3.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 10m
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      tolerations:
        - effect: NoSchedule
          #такой указатель позволит запускать под на узле с любыми taints под эффектом NoSchedule
          operator: Exists
#      tolerations:
#        - effect: NoSchedule
#          key: node-role.kubernetes.io/ingress
#        - effect: NoSchedule
#          key: node-role.kubernetes.io/control-plane
