deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  #способ обновления реплик
  strategy:
#    type: Recreate
    rollingUpdate:
      #кол. реплик которые сразу можно поднять
      maxSurge: 25%
      #кол. реплик которые сразу можно гасить
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx:1.20-alpine
          name: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              #милиц-cpu 1000мили-cpu = 1ядро
              cpu: 10m
              #мегабайты
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
            - name: podinfo
              mountPath: /etc/podinfo
            - name: data
              mountPath: /files
      volumes:
        - name: config
          configMap:
            name: my-configmap-env
        #это тоже Donward API некоторые данные о...
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
        - name: data
          hostPath:
            path: /data_pod
...
