ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nginx
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx
  rules:
    - host: 608686.cloud4box.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-service
                port:
                  number: 80
...
